Added the SMPS_HIGHPOWER assertion whenever enableMotorVdd() is called, plus increased the motor soft start time.  This stops the VDD droop / glitch (to about 2.7V) that looks like a current surge (ADC VREF is VDD) when the motor is starting.  The SMPS_HIGHPOWER line puts the SMPS into its fixed-frequency mode which responds better to high di/dt.

--- a/src/firmware-tests/Platform/Main/Makefile
+++ b/src/firmware-tests/Platform/Main/Makefile
@@ -2,9 +2,16 @@ export SUT_OBJ_FILE=$(PLATFORM_DIR)/Main.o
 export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(PLATFORM_CORE_OBJ_FILES) \
-	$(TEST_FIXTURE_OBJ_FILES)
+	$(TEST_FIXTURE_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o
 
-all: ResetMocks.o ResetDummies.o PollMockToAssertTest.o PollStubToAssertTest.o
+TEST_DOUBLE_OBJ_FILES=\
+	ResetMocks.o \
+	ResetDummies.o \
+	PollMockToAssertTest.o \
+	PollStubToAssertTest.o
+
+all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Reset all
 	$(MAKE) -C Poll all
 	$(MAKE) -C InitialisationCompleted all
