--- a/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
@@ -7,8 +7,8 @@ HEX_FILES=\
 	PreConditionsFromRestAreUnsuccessfulTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
-	../../../Smps/EnableSmpsDummy.o \
-	../../../Smps/DisableSmpsDummy.o \
+	../../../Smps/EnableSmpsDummies.o \
+	../../../Smps/DisableSmpsDummies.o \
 	../../../Smps/IsSmpsEnabledStub.o \
 	../../../Smps/PollSmpsDummy.o \
 	../../../Adc/InitialiseAdcDummy.o \
