--- a/src/firmware-tests/Platform/ShiftRegister/Initialisation/Makefile
+++ b/src/firmware-tests/Platform/ShiftRegister/Initialisation/Makefile
@@ -5,8 +5,8 @@ HEX_FILES=\
 	ShiftRegisterBufferClearedTest.hex
 
 OBJ_FILES+=\
-	../../Smps/EnableSmpsDummy.o \
-	../../Smps/DisableSmpsDummy.o \
+	../../Smps/EnableSmpsDummies.o \
+	../../Smps/DisableSmpsDummies.o \
 	../../Smps/IsSmpsEnabledDummy.o \
 	../../Smps/PollSmpsDummy.o
 
