Added some UI states to facilitate sleeping and the power-down mode.  Added some more SMPS indicators to the testbench.

--- a/src/firmware-tests/Platform/Lcd/EnableDisable/Makefile
+++ b/src/firmware-tests/Platform/Lcd/EnableDisable/Makefile
@@ -8,6 +8,7 @@ HEX_FILES=\
 	StateAfterDisabledTest.hex \
 	DisableAdcTest.hex \
 	DisableAdcNotCalledWhenLcdStillEnabledTest.hex \
+	DisableMotorVddTest.hex \
 	IsLcdEnabledAfterLcdDisabledTest.hex \
 	IsLcdEnabledAfterLcdNotDisabledTest.hex \
 	ContrastPinAfterDisabledTest.hex \
@@ -23,64 +24,87 @@ SHIFT_REGISTER_DUMMY_OBJ_FILES=\
 OBJ_FILES+=\
 	$(ASSERT_NO_ISR_OBJ_FILE) \
 	../PollAfterLcdDummy.o \
-	../InitialiseAfterLcdDummy.o \
-	../../Motor/MotorDummies.o
+	../InitialiseAfterLcdDummy.o
 
 ENABLE_DISABLE_SHIFT_REGISTER_OBJ_FILES=\
 	EnableDisableShiftRegisterTest.o \
 	$(PLATFORM_TESTS_DIR)/ShiftRegister/EnableDisableShiftRegisterMocks.o \
 	$(PLATFORM_TESTS_DIR)/ShiftRegister/InitialiseShiftRegisterMock.o \
 	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftOutMock.o \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 STATE_AFTER_ENABLED_FIRST_TIME_OBJ_FILES=\
 	StateAfterEnabledFirstTimeTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 STATE_AFTER_ENABLED_SECOND_TIME_OBJ_FILES=\
 	StateAfterEnabledSecondTimeTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 STATE_AFTER_DISABLED_NOT_AS_MANY_TIMES_AS_ENABLED_OBJ_FILES=\
 	StateAfterDisabledNotAsManyTimesAsEnabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 STATE_AFTER_DISABLED_OBJ_FILES=\
 	StateAfterDisabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 DISABLE_ADC_OBJ_FILES=\
 	DisableAdcTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcMocks.o
 
 DISABLE_ADC_NOT_CALLED_WHEN_LCD_STILL_ENABLED_OBJ_FILES=\
 	DisableAdcNotCalledWhenLcdStillEnabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcMocks.o
+
+DISABLE_MOTOR_VDD_OBJ_FILES=\
+	DisableMotorVddTest.o \
+	../AdcMocks.o \
+	$(PLATFORM_TESTS_DIR)/Motor/DisableMotorVddMock.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/EnableDisableShiftRegisterMocks.o \
+	$(PLATFORM_TESTS_DIR)/Motor/InitialiseMotorDummy.o \
+	$(PLATFORM_TESTS_DIR)/Motor/EnableMotorVddDummy.o \
+	$(PLATFORM_TESTS_DIR)/Motor/IsMotorVddEnabledDummy.o \
+	$(PLATFORM_TESTS_DIR)/Motor/PollMotorDummy.o \
+	$(PLATFORM_TESTS_DIR)/Motor/TurnMotorDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/InitialiseShiftRegisterDummy.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftOutDummy.o
 
 IS_LCD_ENABLED_AFTER_LCD_DISABLED_OBJ_FILES=\
 	IsLcdEnabledAfterLcdDisabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 IS_LCD_ENABLED_AFTER_LCD_NOT_DISABLED_OBJ_FILES=\
 	IsLcdEnabledAfterLcdNotDisabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 CONTRAST_PIN_AFTER_DISABLED_OBJ_FILES=\
 	ContrastPinAfterDisabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 CONTRAST_PIN_AFTER_NOT_DISABLED_OBJ_FILES=\
 	ContrastPinAfterNotDisabledTest.o \
 	$(SHIFT_REGISTER_DUMMY_OBJ_FILES) \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
 	../AdcDummies.o
 
 all: $(HEX_FILES)
@@ -108,6 +132,9 @@ DisableAdcTest.hex: $(OBJ_FILES) $(DISABLE_ADC_OBJ_FILES)
 
 DisableAdcNotCalledWhenLcdStillEnabledTest.hex: $(OBJ_FILES) $(DISABLE_ADC_NOT_CALLED_WHEN_LCD_STILL_ENABLED_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(DISABLE_ADC_NOT_CALLED_WHEN_LCD_STILL_ENABLED_OBJ_FILES)
+
+DisableMotorVddTest.hex: $(OBJ_FILES) $(DISABLE_MOTOR_VDD_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(DISABLE_MOTOR_VDD_OBJ_FILES)
 
 IsLcdEnabledAfterLcdDisabledTest.hex: $(OBJ_FILES) $(IS_LCD_ENABLED_AFTER_LCD_DISABLED_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(IS_LCD_ENABLED_AFTER_LCD_DISABLED_OBJ_FILES)
