--- a/src/firmware-tests/Ui/Poll/Makefile
+++ b/src/firmware-tests/Ui/Poll/Makefile
@@ -10,7 +10,8 @@ POLL_CHAIN_OBJ_FILES=\
 	$(PLATFORM_TESTS_DIR)/PowerManagement/PowerManagementDummies.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/LcdDummies.o \
 	$(PLATFORM_TESTS_DIR)/Buttons/ButtonsDummies.o \
-	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
+	$(PLATFORM_TESTS_DIR)/Smps/SmpsDummies.o
 
 all: $(HEX_FILES)
 
