Added basic functionality for putBcdDigits().

--- a/src/firmware-tests/Platform/Lcd/BlinkingCursor/Makefile
+++ b/src/firmware-tests/Platform/Lcd/BlinkingCursor/Makefile
@@ -14,12 +14,12 @@ TEST_DOUBLE_OBJ_FILES=\
 
 ENABLE_BLINKING_CURSOR_OBJ_FILES=\
 	EnableBlinkingCursorTest.o \
-	../WriteRegisterTestFixture.o \
+	../WriteTestFixture.o \
 	$(TEST_DOUBLE_OBJ_FILES)
 
 DISABLE_BLINKING_CURSOR_OBJ_FILES=\
 	DisableBlinkingCursorTest.o \
-	../WriteRegisterTestFixture.o \
+	../WriteTestFixture.o \
 	$(TEST_DOUBLE_OBJ_FILES)
 
 all: $(HEX_FILES)
