Added a date / time display to the home screen.

--- a/src/firmware-tests/Platform/Clock/Makefile
+++ b/src/firmware-tests/Platform/Clock/Makefile
@@ -11,7 +11,8 @@ export OBJ_FILES=\
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterClockMock.o \
 	PollAfterClockDummy.o \
-	PollAfterClockMock.o
+	PollAfterClockMock.o \
+	ClockDummies.o
 
 all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Initialisation all
