--- a/src/firmware-tests/Ui/Poll/Makefile
+++ b/src/firmware-tests/Ui/Poll/Makefile
@@ -11,7 +11,8 @@ POLL_CHAIN_OBJ_FILES=\
 	$(PLATFORM_TESTS_DIR)/Lcd/LcdDummies.o \
 	$(PLATFORM_TESTS_DIR)/Buttons/ButtonsDummies.o \
 	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
-	$(PLATFORM_TESTS_DIR)/Smps/SmpsDummies.o
+	$(PLATFORM_TESTS_DIR)/Smps/SmpsDummies.o \
+	$(PLATFORM_TESTS_DIR)/Clock/ClockDummies.o
 
 all: $(HEX_FILES)
 
