--- a/src/firmware-tests/Ui/States/Makefile
+++ b/src/firmware-tests/Ui/States/Makefile
@@ -4,7 +4,8 @@ export OBJ_FILES+=\
 	$(FIRMWARE_TESTS_DIR)/Door/DoorDummies.o \
 	$(PLATFORM_TESTS_DIR)/Timer0/Timer0Dummies.o \
 	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
-	$(PLATFORM_TESTS_DIR)/Smps/SmpsDummies.o
+	$(PLATFORM_TESTS_DIR)/Smps/SmpsDummies.o \
+	$(PLATFORM_TESTS_DIR)/Clock/ClockDummies.o
 
 TEST_FIXTURE_OBJ_FILES=\
 	NextStateIsUnchangedTestFixture.o \
