Moved the date / time BCD digit printing into separate UI states so they can be reused.

--- a/src/firmware/Ui/Makefile
+++ b/src/firmware/Ui/Makefile
@@ -18,6 +18,7 @@ OBJ_FILES=\
 	DoorOverrideStates.o \
 	VersionStates.pp.o \
 	AdjustSettingsStates.o \
+	PutBcdStringStates.o \
 	SleepStates.o
 
 all: $(LIB_FILENAME)
