Added a basic algorithm for lowering the door.  Plugged the Sunrise / Sunset algorithm into a 'new day' schedule and the door opening states.  Various motor control improvements that have come from hardware testing the door closing routine.

--- a/src/firmware-tests/Door/Makefile
+++ b/src/firmware-tests/Door/Makefile
@@ -4,6 +4,9 @@ export OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
+	$(PLATFORM_DIR)/Timer0.a \
+	$(PLATFORM_TESTS_DIR)/Timer0/InitialiseAfterTimer0Dummy.o \
+	$(PLATFORM_TESTS_DIR)/Timer0/PollAfterTimer0Dummy.o \
 	$(PLATFORM_TESTS_DIR)/Clock/ClockDummies.o \
 	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o
 
