--- a/src/firmware-tests/Platform/PowerManagement/ClockSwitching/Makefile
+++ b/src/firmware-tests/Platform/PowerManagement/ClockSwitching/Makefile
@@ -1,8 +1,12 @@
 HEX_FILES=\
-	ClockSwitchingTest.hex
+	ClockSwitchingTest.hex \
+	SlowTimer0OverflowTest.hex
 
 CLOCK_SWITCHING_OBJ_FILES=\
 	ClockSwitchingTest.o
+
+SLOW_TIMER0_OVERFLOW_OBJ_FILES=\
+	SlowTimer0OverflowTest.o
 
 all: $(HEX_FILES)
 
@@ -11,5 +15,8 @@ clean:
 
 ClockSwitchingTest.hex: $(OBJ_FILES) $(CLOCK_SWITCHING_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(CLOCK_SWITCHING_OBJ_FILES)
+
+SlowTimer0OverflowTest.hex: $(OBJ_FILES) $(SLOW_TIMER0_OVERFLOW_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(SLOW_TIMER0_OVERFLOW_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
