--- a/src/firmware-tests/Door/Makefile
+++ b/src/firmware-tests/Door/Makefile
@@ -5,6 +5,7 @@ export OBJ_FILES=\
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
 	$(PLATFORM_DIR)/Timer0.a \
+	$(PLATFORM_TESTS_DIR)/PowerManagement/PowerManagementNonInitialiseAndPollDummies.o \
 	$(PLATFORM_TESTS_DIR)/Timer0/InitialiseAfterTimer0Dummy.o \
 	$(PLATFORM_TESTS_DIR)/Timer0/PollAfterTimer0Dummy.o \
 	$(PLATFORM_TESTS_DIR)/Clock/ClockDummies.o \
