--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /src/utilities/sunrise-sunset/accurate/sunrise-sunset
 /src/utilities/sunrise-sunset/curve-fitting/curve-fit
 /src/utilities/sunrise-sunset/lookup/lookup
+/src/utilities/daylight-savings/daylight-savings
 /src/utilities/trigonometry/cordic/cordic-float
 /src/utilities/trigonometry/cordic/cordic-fixed
 /src/utilities/trigonometry/smoothstep/smoothstep
