Bugfix for the button IOC; if a button was pressed during sleep then the device would only wake at the next clock tick and not immediately as expected..

--- a/src/firmware-tests/Platform/Isr/Initialisation/Makefile
+++ b/src/firmware-tests/Platform/Isr/Initialisation/Makefile
@@ -3,7 +3,9 @@ HEX_FILES=\
 
 INITIALISATION_CHAIN_OBJ_FILES=\
 	InitialisationChainTest.o \
-	../InitialiseAfterIsrMock.o
+	../InitialiseAfterIsrMock.o \
+	$(PLATFORM_TESTS_DIR)/PowerManagement/InitialiseAfterPowerManagementDummy.o \
+	$(PLATFORM_TESTS_DIR)/PowerManagement/PollAfterPowerManagementDummy.o
 
 all: $(HEX_FILES)
 
