--- a/src/firmware-tests/Platform/Isr/Makefile
+++ b/src/firmware-tests/Platform/Isr/Makefile
@@ -3,10 +3,11 @@ export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(PLATFORM_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
-	$(CURDIR)/../Lcd/LcdContrastDummies.o \
-	$(CURDIR)/../PowerManagementDummies.o \
-	$(CURDIR)/../Motor/MotorDummies.o \
-	$(CURDIR)/../Clock/ClockDummies.o
+	$(PLATFORM_DIR)/PowerManagement.a \
+	$(PLATFORM_TESTS_DIR)/Timer0/Timer0Dummies.o \
+	$(PLATFORM_TESTS_DIR)/Lcd/LcdContrastDummies.o \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o \
+	$(PLATFORM_TESTS_DIR)/Clock/ClockDummies.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterIsrDummy.o \
@@ -16,11 +17,13 @@ all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C PreventSleep all
 	$(MAKE) -C Motor all
+	$(MAKE) -C ButtonChange all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
 	$(MAKE) -C PreventSleep clean
 	$(MAKE) -C Motor clean
+	$(MAKE) -C ButtonChange clean
 
 include $(MAKEFILE_RULES)
